 - Added a second boolean parameter to Spring.Get{Player,Team}Info, if it is false the function will not return
   the (now) last return value, the customKeys table (allocation optimisation)
 ! Spring.GetUnit{Armored,IsActive} now works on enemies in LoS
 ! Spring.GetUnitMass no longer works on enemies outside of LoS
 ! remove Spring.{Set,Get}UnitTravel
 - Added a boolean parameter to Spring.GetCameraState, if set to false it will return the current camera name
   and then the following camera-specific values on the stack:
     fps, rot -> oldHeight
     ta -> height, angle, flipped
     spring -> rx, ry, rz, dist
     free -> rx, ry, rz, vx, vy, vz, avx, avy, avz
     ov -> (nil)

AI:
 - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
   skirmishAiCallback_Unit_get{CaptureProgress,BuildProgress,ParalyzeDamage} functions

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - use hidden window for offscreen context rendering
 - add /hang command
 - add /luagccontrol command
 - add /netping command
 - add /netmsgsmoothing command
 - add /distsortprojectiles command
 - add /{more,less}grass and /drawgrass commands
 - remove Basic{Sky,Water,TreeDrawer} (3DTrees is now always 1)
 - remove /DynamicSky command and keybinding
 - remove /{More,Less}Clouds commands
 - remove 3DTrees config-setting
 - remove /adv{map,model}shading commands
 - remove Adv{Map,Unit}Shading config-settings
 - remove ForceDisableShaders config-setting
 - remove Use{V,P}BO config-settings
 - remove LuaShaders config-setting
 - remove legacy InfoTexHandler
 - mandate GLSL support
 - throw out legacy load-screen code (replaced by LuaIntro)
 - change PitchAdjust config-setting from a boolean to an integer